[project]
name = "pquantlib-contrib"
version = "1.0.0"
description = "PQuantLib community contributions and extras"
authors = [{ name = "Jose Moya", email = "jlmoya@gmail.com" }]
license = { text = "BSD" }
requires-python = ">=3.14"
readme = "../README.md"
dependencies = ["pquantlib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pquantlib_contrib"]
