[project]
name = "pquantlib-samples"
version = "1.0.0"
description = "PQuantLib example scripts (not packaged for distribution)"
authors = [{ name = "Jose Moya", email = "jlmoya@gmail.com" }]
license = { text = "BSD" }
requires-python = ">=3.14"
readme = "../README.md"
dependencies = ["pquantlib", "pquantlib-helpers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pquantlib_samples"]
