[project]
name = "pquantlib-showcase"
version = "0.1.0"
description = "Interactive showcase of the PQuantLib quantitative-finance library"
requires-python = ">=3.14"
dependencies = [
    "pquantlib",
    "numpy>=2.1",
    "plotly>=5.20",
    "pandas>=2.2",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pquantlib_showcase"]

[tool.uv.sources]
pquantlib = { workspace = true }

# Dev tooling (pytest, pyright, ruff) is provided by the workspace-root dev group.

[tool.ruff]
target-version = "py313"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# Self-contained pytest config so this member is its own rootdir and does NOT
# inherit the core library's strict `filterwarnings = error` (streamlit/pandas
# emit benign warnings the demo should tolerate).
[tool.pytest.ini_options]
testpaths = ["tests"]
